--- a/src/App.css
+++ b/src/App.css
@@ -120,11 +120,13 @@ ul li {
 .nav-links {
   list-style: none;
   display: flex;
-  flex-direction: column; /* Set to column instead of row */
   padding: 0;
   margin: 0;
 }
 
-.nav-links li {
-  margin: 15px 0; /* Adjust the spacing between links */
+/* Add this media query */
+@media screen and (max-width: 767px) {
+  .nav-links {
+    flex-direction: column;
+  }
 }
