--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 body {
   font-family: 'Poppins', sans-serif;
-  background-image: url('images/ales-nesetril-Im7lZjxeLhg-unsplash.jpg'); /* Replace with your image path/URL */
+  background-image: url('images/ales-nesetril-Im7lZjxeLhg-unsplash.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: rgba(18, 18, 18, 0.8); /* Increased transparency for the dark black background */
-  color: #d1d1e0; /* Slightly indigo text color for better readability on dark background */
+  background-color: rgba(18, 18, 18, 0.8);
+  color: #d1d1e0;
   margin: 0;
   background-attachment: fixed;
 }
@@ -14,17 +14,18 @@ body {
 }
 
 .App-header {
-  background-color: #282c34; /* Darker black header */
+  background-color: #282c34;
   padding: 20px;
-  color: #61dafb; /* Indigo header text color */
-  border-bottom: 2px solid #20232a; /* Even darker border */
+  color: #61dafb;
+  border-bottom: 2px solid #20232a;
+  display: flex;
+  justify-content: space-between; /* Align items horizontally */
+  align-items: center; /* Align items vertically */
 }
 
 nav {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 20px;
 }
 
 nav ul {
@@ -48,7 +49,7 @@ nav a {
 }
 
 nav a:hover {
-  color: #61dafb; /* Lighter indigo on hover */
+  color: #61dafb;
 }
 
 .hamburger {
@@ -66,10 +67,12 @@ nav a:hover {
 
 section {
   padding: 40px;
-  background-color: rgba(18, 18, 18, 0.9); /* Slightly transparent dark black section background */
+  background-color: rgba(18, 18, 18, 0.9);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 20px;
+  display: flex;
+  justify-content: center; /* Center the content horizontally */
 }
 
 h2 {
@@ -91,42 +94,20 @@ ul {
 }
 
 ul li {
-  background-color: rgba(18, 18, 18, 0.8); /* Slightly transparent darker black for grid boxes */
+  background-color: rgba(18, 18, 18, 0.8);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.pagination {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.pagination button {
-  background-color: #282c34;
-  color: #61dafb;
-  border: none;
-  padding: 10px 20px;
-  margin: 0 5px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.pagination button:hover {
-  background-color: #20232a; /* Darker black on hover */
-}
-
-.nav-links {
-  list-style: none;
-  display: flex;
-  padding: 0;
-  margin: 0;
-}
-
-/* Add this media query */
-@media screen and (max-width: 767px) {
+/* New styles for mobile */
+@media screen and (max-width: 768px) {
   .nav-links {
-    flex-direction: column;
+    display: none; /* Hide nav-links initially */
+    flex-direction: column; /* Change direction to column for vertical layout */
+  }
+
+  .nav-links.open {
+    display: flex; /* Show nav-links when open class is applied */
   }
 }
