--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Alice', sans-serif;
   background-image: url('images/ales-nesetril-Im7lZjxeLhg-unsplash.jpg');
   background-size: cover;
   background-repeat: no-repeat;
